# jira-cli

./: .gitignore  README.md  TEST.md  plan  setup.cfg
src/cashout/: auth.py  cli.py  issue.py  open.py
src/jurka/: auth.py  cli.py  issue.py  open.py
