[metadata]
name = jurka
version = 0.1.0
description = CLI to create Jira tickets with Bearer token and checkout branches
author = Nikolay Kostov
author_email = nikolay.yavorov.kostov@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    click>=8.1
    requests>=2.31
optional-dependencies =
    keyring>=24.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jurka = jurka.cli:cli
    jirka = jurka.cli:cli
    jira  = jurka.cli:cli
